<resources>
    <string name="app_name">Sensify Xposed</string>
    <string name="app_description">Integration for Sense apps into AOSP and other ROMs.</string>
    <string name="title_activity_log">Logs</string>
    <string name="warn_no_hsp_title">Install HTC Service Pack</string>
    <string name="warn_no_hsp_content">You don\'t have HTC Service Pack installed.
        \nMost HTC apps need HTC Service Pack to work correctly.
        \nDo you want to download it now?</string>


    <!-- Preferences -->

    <string name="pref_cat_general">Global</string>
    <string name="pref_general_always_active_title">Always active mods</string>
    <string name="pref_always_active_authorize_title">Authorize HTC apps</string>
    <string name="pref_always_active_authorize_summary">Removes the \"Unauthorized device\"
        message from the following HTC apps:
        \nHTC Sense Home, Facebook for HTC Sense, Google+ for HTC Sense, LinkedIn for HTC Sense,
        Twitter for HTC Sense, HTC Themes, HTC Keyboard.</string>
    <string name="pref_always_active_vending_title">Allow downloading of HTC apps</string>
    <string name="pref_always_active_vending_summary">Allows to search and download HTC apps in
        Google Play Store, removes the \"not compatible\" message on the install page.</string>
    <string name="pref_cat_rotate">Rotation</string>
    <string name="pref_rotate_force_rotate_title">Rotation</string>
    <string name="pref_rotate_force_rotate_summary">Enable launcher rotation of Sense Home.</string>
    <string name="pref_rotate_kill_launcher_title">Restart Sense Home</string>
    <string name="pref_rotate_kill_launcher_summary">Immediately apply changes to this setting by
        restarting Sense Home. Requires root permission.</string>
    <string name="pref_cat_storage">Storage options</string>
    <string name="pref_cat_debug">Debugging</string>
    <string name="pref_debug_show_log_title">Show log</string>
    <string name="pref_debug_show_log_summary">Show the system logcat of Sensify. Requires
        root permission to read system-wide.</string>
    <string name="pref_debug_export_log_title">Save and send log</string>
    <string name="pref_debug_export_log_summary">Save the system logcat and send it. \n
        Requires root permissions.</string>
    <string name="pref_storage_ext_check_title">Enable external storage</string>
    <string name="pref_storage_ext_check_summary">Tell HTC apps that your device
        has an external storage.</string>
    <string name="pref_storage_ext_path_title">External storage path</string>
    <string name="pref_storage_usb_check_title">Enable USB storage</string>
    <string name="pref_storage_usb_check_summary">Tell HTC apps that your device
        supports USB storage (USB-OTG).</string>
    <string name="pref_storage_usb_path_title">USB storage path</string>
    <string name="pref_cat_themes">HTC Themes</string>
    <string name="pref_themes_check_title">Use Themes for Material apps</string>
    <string name="pref_themes_check_summary">Material apps without specific colors will be
        tinted according to current HTC Theme.</string>
    <string name="pref_themes_theme_PrimaryColor_title">Primary color</string>
    <string name="pref_themes_theme_PrimaryColor_summary">Color to use for Android\'s notification
        panel header.</string>
    <string name="pref_themes_theme_PrimaryDarkColor_title">Secondary color</string>
    <string name="pref_themes_theme_PrimaryDarkColor_summary">Color to use for Android\'s quick settings.
        </string>
    <string name="pref_themes_theme_AccentColor_title">Accent Color 1</string>
    <string name="pref_themes_theme_AccentColor_summary">Color to use for accent items like buttons.
        </string>
    <string name="pref_themes_systemui_use_launcher_title">Theme SystemUI</string>
    <string name="pref_themes_systemui_use_launcher_summary">Use Theme colors
        for SystemUI.</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_about_version_title">Version: </string>
    <string name="pref_about_dev_title">Authors: </string>
    <string name="drawer_title_main">Main</string>
    <string name="drawer_title_themes">Themes</string>
    <string name="drawer_title_downloads">Downloads</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_quickreboot">Quick Reboot</string>
    <string name="drawer_title_reboot">Reboot</string>
    <string name="drawer_title_about">About</string>
    <string name="pref_about_dev_summary" translatable="false">&#169; 2015 Woalk, DigitalHigh
        \nLicensed under GNU GPL v2.
        \nSee at github.com/woalk/HTCAuthorizer</string>
    <string name="ImageViewDescriptor">You\'re invited to the pants party!</string>
    <string name="Descriptor2">Welcome to thunderdome.</string>
    <string name="pref_create_permfile_summary">Creates permission file necessary for some devices to download HTC apps from store.</string>
    <string name="pref_create_permfile_title">Create Permission File</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="pref_themes_automix_themes_summary">Auto Mix theme colors where HTC theme contains all the same color.</string>
    <string name="pref_themes_automix_themes_title">Auto-mix theme colors</string>
    <string name="dialog_title_reboot">Would you like to reboot?</string>
    <string name="dialog_message_reboot">Select an option below.</string>
    <string name="welcome1_title">Sensify Xposed.</string>
    <string name="welcome1_summary">Unleash your ROM.</string>
    <string name="welcome2_title">Themeing Redefined.</string>
    <string name="welcome2_summary">Your device, your way.  No limitations.</string>
    <string name="welcome3_title">Unlock everything.</string>
    <string name="welcome3_summary">Use your apps the way they were meant to be used, without restriction.</string>

    <!--Download links-->
    <string name="dl_path_Prism" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=21581</string>
    <string name="dl_path_Camera" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=18737</string>
    <string name="dl_path_Gallery" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16517</string>
    <string name="dl_path_Ime" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16867</string>
    <string name="dl_path_Ime_Eng" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16106</string>
    <string name="dl_path_Ime_es" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16743</string>
    <string name="dl_path_Ime_lv_LV" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16721</string>
    <string name="dl_path_lt_LT" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16723</string>
    <string name="dl_path_nb_NO" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16727</string>
    <string name="dl_path_it_IT" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16717</string>
    <string name="dl_path_ru_RU" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16885</string>
    <string name="dl_path_uk_UA" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16889</string>
    <string name="dl_path_en_GB" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16891</string>
    <string name="dl_path_de_DE" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16593</string>
    <string name="dl_path_Clock" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=21581</string>
    <string name="dl_path_Weather" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=21581</string>
    <string name="dl_path_Browser" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=18733</string>
    <string name="dl_path_Scribble" translatable="false">http://www.apkmirror.com/wp-content/themes/APKMirror/download.php?id=16625</string>
    <string name="fragment_title_Logging">Logging</string>

</resources>
