<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_general_always_active_title">
    <PreferenceCategory android:title="@string/pref_general_always_active_title">
        <Preference
            android:summary="@string/pref_always_active_authorize_summary"
            android:title="@string/pref_always_active_authorize_title"/>
        <Preference
            android:summary="@string/pref_always_active_vending_summary"
            android:title="@string/pref_always_active_vending_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_debug">
        <Preference
            android:key="show_log"
            android:summary="@string/pref_debug_show_log_summary"
            android:title="@string/pref_debug_show_log_title"/>
        <Preference
            android:key="log_loc"
            android:summary="@string/pref_debug_export_log_summary"
            android:title="@string/pref_debug_export_log_title"/>


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_about">
        <Preference
            android:key="version"
            android:selectable="false"
            android:title="@string/pref_about_version_title"/>
        <Preference
            android:key="version"
            android:selectable="false"
            android:summary="@string/pref_about_dev_summary"
            android:title="@string/pref_about_dev_title"/>
    </PreferenceCategory>
</PreferenceScreen>